--- a/day02/views/shop/Detail.ejs
+++ b/day02/views/shop/Detail.ejs
@@ -9,28 +9,32 @@
     <%-include('../inc/Top.ejs') %>
     <hr />
     <div class="container">
-        <h2>상품 목록</h2>
+        <h2>상품 상세 보기</h2>
         <table class="table">
             <tr>
                 <th>ID</th>
-                <th>NAME</th>
-                <th>PRICE</th>
-                <th>YEAR</th>
-            </tr>
-        <%
-            carList.forEach((car)=>{
-        %>
-            <tr>
                 <td><%=car._id %></td>
-                <td><a href="/shop/detail?_id=<%=car._id %>"><%=car.name %></a></td>
+            </tr>
+            <tr>
+                <th>NAME</th>
+                <td><%=car.name %></td>
+            </tr>
+            <tr>
+                <th>PRICE</th>
                 <td><%=car.price %></td>
+            </tr>
+            <tr>
+                <th>YEAR</th>
                 <td><%=car.year %></td>
             </tr>
-        <%
-            })
-        %>
+            <tr>
+                <th>COMPANY</th>
+                <td><%=car.company %></td>
+            </tr>
         </table>
         <hr/>
+        <a href="/shop/modify?_id=<%=car._id%>">수정</a> | 
+        <a href="/shop/delete?_id=<%=car._id%>">삭제</a> | 
         <%-include('./ShopNav.ejs') %>
     </div>
 </body>
